--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=hagyodb
-
-server.port=8081
+spring.data.mongodb.host=ds261626.mlab.com
+spring.data.mongodb.port=61626
+spring.data.mongodb.database=heroku_cffn754b
+spring.data.mongodb.username=adminamjad
+spring.data.mongodb.password=accofaskt97
