--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.data.mongodb.host=ds261626.mlab.com
-spring.data.mongodb.port=61626
-spring.data.mongodb.retryWrites=false
+#spring.data.mongodb.host=ds261626.mlab.com
+#spring.data.mongodb.port=61626
+#spring.data.mongodb.retryWrites=false
+
+#spring.data.mongodb.username=adminamjad
+#spring.data.mongodb.password=accofaskt97
+
+spring.data.mongodb.uri=mongodb+srv://adminamjad:accofaskt97@ds261626.mlab.com/heroku_cffn754b?retryWrites=true
 spring.data.mongodb.database=heroku_cffn754b
-spring.data.mongodb.username=adminamjad
-spring.data.mongodb.password=accofaskt97
