--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@
 #spring.data.mongodb.username=adminamjad
 #spring.data.mongodb.password=accofaskt97
 
-spring.data.mongodb.uri=mongodb+srv://adminamjad:accofaskt97@ds261626.mlab.com/test?retryWrites=true
+spring.data.mongodb.uri=mongodb://adminamjad:accofaskt97@ds261626.mlab.com/heroku_cffn754b?retryWrites=true
 spring.data.mongodb.database=heroku_cffn754b
