classroom apis modified

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@
 
 spring.data.mongodb.uri=mongodb://adminamjad:accofaskt97@ds261626.mlab.com:61626/heroku_cffn754b?retryWrites=false
 #spring.data.mongodb.database=heroku_cffn754b
+server.port=8081
